--- a/part4/blog/backend/package.json
+++ b/part4/blog/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "node --watch index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --test",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
@@ -22,6 +22,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "lodash": "^4.17.21",
     "mongoose": "^8.13.2"
   }
 }
