--- a/part4/blog/backend/package.json
+++ b/part4/blog/backend/package.json
@@ -22,9 +22,11 @@
     "supertest": "^7.1.0"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.13.2"
   }
