--- a/part5/notes/backend/package.json
+++ b/part5/notes/backend/package.json
@@ -12,6 +12,7 @@
     "test": "cross-env NODE_ENV=test node --test",
     "test:api": "cross-env NODE_ENV=test npm test -- tests/note_api.test.js",
     "test:api:users": "cross-env NODE_ENV=test npm test -- --test-name-pattern=\"when the is initially one user in db\"",
+    "start:test": "cross-env NODE_ENV=test node index.js",
     "build:ui": "rm -rf dist && cd ../frontend && npm run build && cp -r dist ../backend",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
     "lint": "eslint .",
