--- a/part5/blog/backend/package.json
+++ b/part5/blog/backend/package.json
@@ -8,7 +8,9 @@
     "test": "cross-env NODE_ENV=test node --test",
     "test:api": "cross-env NODE_ENV=test npm test -- tests/blog_api.test.js",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "build:ui": "rm -rf dist && cd ../frontend/ && npm run build && cp -r dist ../backend",
+    "start:test": "cross-env NODE_ENV=test node index.js"
   },
   "keywords": [],
   "author": "",
