--- a/part8/phonebook/backend/package.json
+++ b/part8/phonebook/backend/package.json
@@ -12,7 +12,10 @@
   "description": "",
   "dependencies": {
     "@apollo/server": "^4.12.1",
-    "graphql": "^16.11.0"
+    "dotenv": "^16.5.0",
+    "graphql": "^16.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.15.0"
   },
   "devDependencies": {
     "node-dev": "^8.0.0",
