--- a/part9/exercises-9b/package.json
+++ b/part9/exercises-9b/package.json
@@ -5,6 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "ts-node": "ts-node",
+    "start": "ts-node index.ts",
+    "dev": "ts-node-dev index.ts",
     "calculateBmi": "npm run ts-node -- bmiCalculator.ts",
     "calculateExercises": "npm run ts-node -- exerciseCalculator.ts"
   },
@@ -13,6 +15,11 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
-    "@types/node": "^22.15.24"
+    "@types/express": "^5.0.2",
+    "@types/node": "^22.15.24",
+    "ts-node-dev": "^2.0.0"
+  },
+  "dependencies": {
+    "express": "^5.1.0"
   }
 }
