--- a/part9/exercises-9b/package.json
+++ b/part9/exercises-9b/package.json
@@ -7,6 +7,7 @@
     "ts-node": "ts-node",
     "start": "ts-node index.ts",
     "dev": "ts-node-dev index.ts",
+    "lint": "eslint .",
     "calculateBmi": "npm run ts-node -- bmiCalculator.ts",
     "calculateExercises": "npm run ts-node -- exerciseCalculator.ts"
   },
@@ -15,9 +16,15 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@eslint/js": "^9.27.0",
+    "@stylistic/eslint-plugin": "^4.4.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.24",
-    "ts-node-dev": "^2.0.0"
+    "eslint": "^9.27.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.33.0"
   },
   "dependencies": {
     "express": "^5.1.0"
