--- a/part9/fs-open/package.json
+++ b/part9/fs-open/package.json
@@ -7,15 +7,22 @@
     "ts-node": "ts-node",
     "start": "ts-node index.ts",
     "dev": "ts-node-dev index.ts",
+    "lint": "eslint .",
     "multiply": "ts-node multiplier.ts",
     "calculate": "ts-node calculator.ts"
   },
   "keywords": [],
   "type": "commonjs",
   "devDependencies": {
+    "@eslint/js": "^9.27.0",
+    "@stylistic/eslint-plugin": "^4.4.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.23",
-    "ts-node-dev": "^2.0.0"
+    "eslint": "^9.27.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.33.0"
   },
   "dependencies": {
     "express": "^5.1.0"
