--- a/part9/flight-diary/backend/package.json
+++ b/part9/flight-diary/backend/package.json
@@ -24,6 +24,7 @@
     "typescript-eslint": "^8.33.0"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "zod": "^3.25.46"
   }
 }
