--- a/part9/flight-diary/backend/package.json
+++ b/part9/flight-diary/backend/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@eslint/js": "^9.27.0",
     "@stylistic/eslint-plugin": "^4.4.0",
+    "@types/cors": "^2.8.18",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.2",
     "eslint": "^9.27.0",
@@ -24,6 +25,7 @@
     "typescript-eslint": "^8.33.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "zod": "^3.25.46"
   }
