--- a/part9/notes/package.json
+++ b/part9/notes/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "frontend",
+  "name": "notes",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "server": "npx json-server --port 3001 db.json",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "json-server": "^1.0.0-beta.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
