--- a/part10/rate-repository-app/package.json
+++ b/part10/rate-repository-app/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.13.8",
     "@expo/metro-config": "^0.20.14",
     "@expo/metro-runtime": "~5.0.4",
+    "dotenv": "^16.5.0",
     "expo": "~53.0.10",
     "expo-status-bar": "~2.2.3",
     "formik": "^2.4.6",
@@ -23,7 +24,8 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-web": "^0.20.0",
     "react-router-native": "^6.30.0",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
