--- a/part10/rate-repository-app/package.json
+++ b/part10/rate-repository-app/package.json
@@ -7,12 +7,26 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "eslint ./src/**/*.{js,jsx} App.js --no-error-on-unmatched-pattern"
+    "lint": "eslint ./src/**/*.{js,jsx} App.js --no-error-on-unmatched-pattern",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg|react-router-native)"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupTests.js"
+    ]
   },
   "dependencies": {
     "@apollo/client": "^3.13.8",
     "@expo/metro-config": "^0.20.14",
     "@expo/metro-runtime": "~5.0.4",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "dotenv": "^16.5.0",
     "expo": "~53.0.10",
     "expo-status-bar": "~2.2.3",
@@ -25,16 +39,22 @@
     "react-native-web": "^0.20.0",
     "react-router-native": "^6.30.0",
     "yup": "^1.6.1",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "expo-linking": "~7.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/eslint-parser": "^7.27.5",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.28.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.2.0",
     "eslint": "^9.28.0",
+    "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-native": "^5.0.0"
+    "eslint-plugin-react-native": "^5.0.0",
+    "jest": "^29.7.0",
+    "jest-expo": "^53.0.7",
+    "react-test-renderer": "^19.0.0"
   },
   "private": true
 }
