--- a/part10/rate-repository-app/package.json
+++ b/part10/rate-repository-app/package.json
@@ -29,6 +29,7 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "dotenv": "^16.5.0",
     "expo": "~53.0.10",
+    "expo-linking": "~7.1.5",
     "expo-status-bar": "~2.2.3",
     "formik": "^2.4.6",
     "graphql": "^16.11.0",
@@ -38,8 +39,7 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-web": "^0.20.0",
     "react-router-native": "^6.30.0",
-    "yup": "^1.6.1",
-    "expo-linking": "~7.1.5"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -48,6 +48,7 @@
     "@eslint/js": "^9.28.0",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.2.0",
+    "date-fns": "^4.1.0",
     "eslint": "^9.28.0",
     "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-react": "^7.37.5",
