--- a/part10/rate-repository-app/package.json
+++ b/part10/rate-repository-app/package.json
@@ -27,6 +27,7 @@
     "@expo/metro-config": "^0.20.14",
     "@expo/metro-runtime": "~5.0.4",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-picker/picker": "^2.11.1",
     "dotenv": "^16.5.0",
     "expo": "~53.0.10",
     "expo-linking": "~7.1.5",
