--- a/part10/rate-repository-app/package.json
+++ b/part10/rate-repository-app/package.json
@@ -37,9 +37,11 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
+    "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-web": "^0.20.0",
     "react-router-native": "^6.30.0",
+    "use-debounce": "^10.0.5",
     "yup": "^1.6.1"
   },
   "devDependencies": {
