--- a/part12/part12-containers-applications/todo-app/todo-backend/docker-compose.dev.yml
+++ b/part12/part12-containers-applications/todo-app/todo-backend/docker-compose.dev.yml
@@ -10,6 +10,15 @@ services:
     volumes:
       - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
       - mongo_data:/data/db
+  redis:
+    image: redis
+    restart: always
+    ports:
+      - 6379:6379
+    command: redis-server --save 20 1 --loglevel warning
+    environment:
+      - REDIS_HOST=localhost
+      - REDIS_PORT=6379
 
 volumes:
   mongo_data:
