--- a/part12/part12-containers-applications/notes/frontend/Dockerfile
+++ b/part12/part12-containers-applications/notes/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:20 as build-stage 
+FROM node:20 as build-stage
 
 WORKDIR /usr/src/app
 
@@ -6,9 +6,9 @@ COPY . .
 
 RUN npm ci
 
-RUN npm run test
+RUN npm test
 
-ENV VITE_BACKEND_URL=http://localhost:8080/api
+ENV VITE_BACKEND_URL=http://localhost:3000
 
 RUN npm run build
 
